external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: k8s.gcr.io/external-dns/external-dns:v0.10.1
        args:
        - --source=service
        - --source=ingress
        - --provider=google
        - --google-project=my-project-2-428517
        volumeMounts:
        - name: gcp-credentials
          mountPath: /etc/kubernetes/gcp
          readOnly: true
      volumes:
      - name: gcp-credentials
        secret:
          secretName: external-dns-gcp-credentials
